force-app/main/default/objects/Case_Email_Count__c/Case_Email_Count__c.object-meta.xml
<CustomObject>
    <description>Custom object contains the year and month wise email counts for cases. Used in the report</description>
    <label>Case Email Count</label>
    <nameField>
        <label>Case Email Count Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Email Counts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>