force-app/main/default/objects/Case_Email_Count__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Contains the count for the particular year and month of email messages</description>
    <label>Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>