force-app/main/default/objects/Case_Email_Count__c/fields/YearMonth__c.field-meta.xml
<CustomField>
    <fullName>YearMonth__c</fullName>
    <description>Technical field for performing the upsert
format year-month</description>
    <externalId>true</externalId>
    <label>Date/Time Opened</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>